Fixes the bug: the bot avatar images are displayed stretched in the chatbot list

--- a/src/app/bots/bots-list/bots-list.component.scss
+++ b/src/app/bots/bots-list/bots-list.component.scss
@@ -254,6 +254,11 @@ input[type="checkbox"]:disabled {
   }
 }
 
+
+.bot--img {
+  vertical-align: middle; width: 52px; height: 52px; border-radius: 50%; border: 1px solid #eee; margin-right: 6px; object-fit: cover;
+}
+
 // .card_title__underlined {
 //   text-transform: none;
 //   color: #566787;
